--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/pawelbus/16.4.zadanie.git"
+  },
+  "dependencies": {
+    "uuid": "^3.3.2"
   }
 }
